--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "parcel",
   "version": "1.0.0",
-  "description": "",
+  "description": "Testing Hot Module Replacement with Parcel",
   "main": "index.js",
   "scripts": {
     "watch": "parcel watch index.html index.js --hmr-hostname localhost --hmr-port 8081",
     "web": "python3 -m http.server"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "parcel"
+  ],
+  "author": "@patoroco",
   "license": "ISC",
   "devDependencies": {
+    "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1"
-  }
+  },
+  "dependencies": {}
 }
